# rustcouchdb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
couch-http/: Cargo.toml  README.md
couch-http/examples/: atrest_bench.rs  decode_check.rs
couch-http/src/: api_bulk.rs  api_changes.rs  api_db.rs  api_docs.rs  api_mango.rs  api_node.rs  api_repl.rs  api_root.rs  auth.rs  compress.rs  error.rs  jsfilter.rs  lib.rs  main.rs  metrics.rs  proto.rs  repl.rs  spool.rs  state.rs  ui.rs  util.rs  validate.rs
couch-http/tests/: e2e.rs
couch-http/ui/: index.html
couch-index/: Cargo.toml  README.md
couch-index/src/: ddoc.rs  find.rs  index.rs  keys.rs  lib.rs  main.rs  planner.rs  spatial.rs
couch-index/tests/: e2e.rs
couch-mango/: Cargo.toml
couch-mango/src/: lib.rs
couch-proto/: Cargo.toml
couch-proto/examples/: extract_bench.rs
couch-proto/src/: extract.rs  lib.rs  protodoc.rs
couch-repl/: Cargo.toml  README.md
couch-repl/bench/: bench.sh
couch-repl/src/: attachments.rs  changes.rs  checkpoint.rs  cli.rs  client.rs  error.rs  fetch.rs  gen.rs  ids.rs  lib.rs  main.rs  mango.rs  metrics.rs  pipeline.rs  retry.rs  revs_diff.rs  seq.rs  server.rs  stats.rs  util.rs  write.rs
couch-store/: Cargo.toml  README.md
couch-store/src/: btree.rs  compact.rs  compress.rs  db.rs  doc.rs  ejson.rs  error.rs  etf.rs  file.rs  header.rs  lib.rs  main.rs  revtree.rs  writer.rs
