[package]
name = "couch-http"
version = "0.1.0"
edition = "2021"
description = "rustcouchdb server: the CouchDB HTTP API on couch-store + couch-index, with couch-repl embedded"
license = "Apache-2.0"

[dependencies]
couch-store = { path = "../couch-store" }
couch-index = { path = "../couch-index" }
couch-proto = { path = "../couch-proto" }
couch-mango = { path = "../couch-mango" }
couch-repl = { path = "../couch-repl" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-util = "0.7"
tokio-stream = "0.1"
tower = "0.5"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio", "matched-path"] }
async-compression = { version = "0.4", default-features = false, features = ["tokio", "gzip"] }
http-body = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
md-5 = "0.10"
futures = "0.3"
bytes = "1"
tempfile = "3"
flate2 = "1"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "stream"] }
prost = "0.13"
prost-types = "0.13"
