[package]
name = "couch-repl"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Standalone high-throughput CouchDB replicator"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "io-util"] }
tokio-util = { version = "0.7" }
tokio-stream = { version = "0.1" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
clap = { version = "4.5", features = ["derive", "env"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
futures = "0.3"
bytes = "1"
url = "2.5"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md-5 = "0.10"
regex = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
httpdate = "1"

[profile.release]
lto = "thin"
codegen-units = 1

[dev-dependencies]
tempfile = "3"
